--- a/bidding_srcipts/bidding_finetune.yaml
+++ b/bidding_srcipts/bidding_finetune.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: bidding_outputs/pretrain_outputs/qwen_pretrain_241216
+model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
 
 ### method
 stage: sft
@@ -8,15 +8,15 @@ finetuning_type: full
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
-dataset: bidding_finetune_realworld_250105, identity
+dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
 template: qwen
 cutoff_len: 8192
-max_samples: 1000
+# max_samples: 1000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/qwen_pretrain_finetune_250105
+output_dir: bidding_outputs/finetune_outputs/bidding_pretrain_finetune_250112
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
