--- a/bidding_srcipts/bidding_finetune.yaml
+++ b/bidding_srcipts/bidding_finetune.yaml
@@ -1,5 +1,6 @@
 ### model
 model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
+# model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
 
 ### method
 stage: sft
@@ -11,12 +12,12 @@ deepspeed: examples/deepspeed/ds_z3_config.json
 dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
 template: qwen
 cutoff_len: 8192
-# max_samples: 1000
+max_samples: 10000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/bidding_pretrain_finetune_250112
+output_dir: bidding_outputs/finetune_outputs/bidding_finetune_250114_2
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
@@ -25,11 +26,10 @@ overwrite_output_dir: true
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
 learning_rate: 1.0e-5
-num_train_epochs: 2.0
+num_train_epochs: 1
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
-ddp_timeout: 180000000
 
 ### eval
 # val_size: 0.1
