--- a/bidding_srcipts/bidding_finetune.yaml
+++ b/bidding_srcipts/bidding_finetune.yaml
@@ -1,6 +1,6 @@
 ### model
-model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
-# model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
+# model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
+model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
 
 ### method
 stage: sft
@@ -9,30 +9,25 @@ finetuning_type: full
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
-dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
+# dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
+dataset: finetune_general_250112, identity
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
 overwrite_cache: true
-preprocessing_num_workers: 16
+preprocessing_num_workers: 
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/bidding_finetune_250114_2
+output_dir: bidding_outputs/finetune_outputs/bidding_pretrain_finetune_250118_test
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
 
 ### train
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 1
 learning_rate: 1.0e-5
 num_train_epochs: 1
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
-
-### eval
-# val_size: 0.1
-# per_device_eval_batch_size: 1
-# eval_strategy: steps
-# eval_steps: 500
