--- a/bidding_srcipts/bidding_finetune.yaml
+++ b/bidding_srcipts/bidding_finetune.yaml
@@ -1,6 +1,6 @@
 ### model
-# model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
-model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
+model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
+# model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
 
 ### method
 stage: sft
@@ -10,15 +10,15 @@ deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
 # dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
-dataset: finetune_general_250112, identity
+dataset: finetune_general_250112, identity, finetune_generate_rw_250105
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
 overwrite_cache: true
-preprocessing_num_workers: 
+preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/bidding_pretrain_finetune_250118_test
+output_dir: bidding_outputs/finetune_outputs/bidding_pretrain_finetune_250118_test_v2
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
