--- a/bidding_srcipts/bidding_finetune_lora.yaml
+++ b/bidding_srcipts/bidding_finetune_lora.yaml
@@ -2,6 +2,7 @@
 # model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
 # model_name_or_path: checkpoints/Qwen/DeepSeek-R1-Distill-Qwen-14B
 model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
+model_max_length: 8192
 flash_attn: fa2
 
 ### method
