--- a/bidding_srcipts/bidding_dpo.yaml
+++ b/bidding_srcipts/bidding_dpo.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: bidding_outputs/finetune_outputs/finetune@pt@FGIRCS@20250306
+model_name_or_path: bidding_outputs/finetune_outputs/finetune@14B@pt@full@FGIRCS@20250312
 trust_remote_code: true
 
 ### method
@@ -11,7 +11,7 @@ pref_loss: sigmoid  # choices: [sigmoid (dpo), orpo, simpo]
 deepspeed: examples/deepspeed/ds_z3_offload_config.json
 
 ### dataset
-dataset: dpo@zhulong@20250306
+dataset: dpo_zhulong_20250306
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
@@ -19,7 +19,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/posttrain_outputs/dpo@FGIRCS@20250306
+output_dir: bidding_outputs/posttrain_outputs/dpo@14B@pt@full@FGIRCS@20250312
 logging_steps: 10
 save_steps: 1000
 plot_loss: true
@@ -27,9 +27,9 @@ overwrite_output_dir: true
 
 ### train
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 1
 learning_rate: 5.0e-6
-num_train_epochs: 2.0
+num_train_epochs: 1
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
