--- a/bidding_srcipts/bidding_finetune.yaml
+++ b/bidding_srcipts/bidding_finetune.yaml
@@ -1,17 +1,17 @@
 ### model
 # model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
-model_name_or_path: checkpoints/Qwen/Qwen2.5-32B-Instruct
+model_name_or_path: bidding_outputs/pretrain_outputs/pretrain@250312
 flash_attn: fa2
 
 ### method
 stage: sft
 do_train: true
-finetuning_type: lora
+finetuning_type: full
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
 # dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
-dataset: finetune_general_250112, identity, finetune_realworld_250105, finetune_realworld_250227, finetune_continue_250112, finetune_summary_250112
+dataset: finetune_general_250112, identity, finetune_realworld_250105, finetune_realworld_250227, finetune_continue_250112, finetune_summary_250112, finetune_realworld_250312
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
@@ -19,7 +19,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/finetune@32B@pure@FGIRCS@20250310
+output_dir: bidding_outputs/finetune_outputs/finetune@14B@pt@full@FGIRCS@20250312
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
