--- a/bidding_srcipts/bidding_dpo.yaml
+++ b/bidding_srcipts/bidding_dpo.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: bidding_outputs/finetune_outputs/finetune@14B@pt@full@FGIRCS@20250312
+model_name_or_path: bidding_outputs/finetune_outputs/finetune@14B@pt@full@R@250314
 trust_remote_code: true
 
 ### method
@@ -11,7 +11,7 @@ pref_loss: sigmoid  # choices: [sigmoid (dpo), orpo, simpo]
 deepspeed: examples/deepspeed/ds_z3_offload_config.json
 
 ### dataset
-dataset: dpo_zhulong_20250306
+dataset: dpo_realworld_20250306
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
@@ -19,9 +19,8 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/posttrain_outputs/dpo@14B@pt@full@FGIRCS@20250312
+output_dir: bidding_outputs/posttrain_outputs/dpo@14B@pt@full@R@250316
 logging_steps: 10
-save_steps: 1000
 plot_loss: true
 overwrite_output_dir: true
 
@@ -33,4 +32,5 @@ num_train_epochs: 1
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
+save_steps: 20000
 ddp_timeout: 180000000
