--- a/bidding_srcipts/bidding_pretrain.yaml
+++ b/bidding_srcipts/bidding_pretrain.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
+model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
 
 ### method
 stage: pt
@@ -8,15 +8,14 @@ finetuning_type: full
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
-# dataset: pretrain_main_241216, pretrain_rules_250112, pretrain_wudao_3
-dataset: pretrain_main_250312
+dataset: pretrain_main_250105, pretrain_rules_250105, pretrain_main_250312
 cutoff_len: 8192
 # max_samples: 1000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/pretrain_outputs/pretrain@250312
+output_dir: bidding_outputs/pretrain_outputs/pretrain@250314
 logging_steps: 10
 plot_loss: true
 overwrite_output_dir: true
