--- a/bidding_srcipts/bidding_finetune_lora_yxs.yaml
+++ b/bidding_srcipts/bidding_finetune_lora_yxs.yaml
@@ -1,17 +1,16 @@
 ### model
-# model_name_or_path: bidding_outputs/pretrain_outputs/bidding_pretrain_250112
 model_name_or_path: bidding_outputs/pretrain_outputs/pretrain@250314
 flash_attn: fa2
 
 ### method
 stage: sft
 do_train: true
-finetuning_type: full
+finetuning_type: lora
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
-# dataset: finetune_generate_rw_250105, finetune_continue_250112, finetune_summary_250112, finetune_general_250112, identity
-dataset: finetune_realworld_part1, finetune_realworld_part2, finetune_realworld_part3
+# dataset: finetune_continue_250112, finetune_summary_250112
+dataset: finetune_realworld_part1, finetune_realworld_part2, finetune_realworld_part3, gkx_data
 template: qwen
 cutoff_len: 8192
 max_samples: 10000
@@ -19,11 +18,10 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/finetune_outputs/sft@14B@pt@full@Wrting@250415
+output_dir: bidding_outputs/finetune_outputs/sft@14B@lora@gkx@250506
 logging_steps: 1
 plot_loss: true
 overwrite_output_dir: true
-save_steps: 20000
 
 ### train
 per_device_train_batch_size: 1
@@ -33,4 +31,3 @@ num_train_epochs: 2
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
-save_steps: 20000
