--- a/bidding_srcipts/bidding_pretrain.yaml
+++ b/bidding_srcipts/bidding_pretrain.yaml
@@ -1,10 +1,11 @@
 ### model
-model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
+# model_name_or_path: checkpoints/Qwen/Qwen2.5-14B-Instruct
+model_name_or_path: checkpoints/Qwen/Qwen2.5-72B-Instruct
 
 ### method
 stage: pt
 do_train: true
-finetuning_type: full
+finetuning_type: lora
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
@@ -15,7 +16,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: bidding_outputs/pretrain_outputs/pretrain@250314
+output_dir: bidding_outputs/pretrain_outputs/pretrain@72B@lora@250402
 logging_steps: 10
 plot_loss: true
 overwrite_output_dir: true
